# claude_skills

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  CLAUDE.md  README.md  install.py  pyproject.toml  research_skills_process.md  understand_dismantle_and_rewrite_prompt_optimized_for_gemini.md
.claude/: .gitignore  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: c-systems-programmer.md  claude-context-optimizer.md  code-review.md  context-gathering.md  context-refinement.md  doc-drift-auditor.md  logging.md  plugin-assessor.md  plugin-docs-writer.md  service-documentation.md  skill-refactorer.md
.claude/commands/: CLAUDE.md  am-i-complete.md  audit.md  complete-refactor.md  delegate.md  how-to-delegate.md  implement-refactor.md  prompt-writer.md  review-plugin-for-refactor.md  sessions.md  start-refactor-task.md  think.md  verify.md  write-to-skill-file-original.md  write-to-skill-file.md
.claude/commands/agents/: AGENT-create-command.md  AGENT-improve-command.md  AGENT-playbook-to-automated-agent-workflow.md
.claude/hooks/: session-start-rtiac.js  session-start-rtica.js
.claude/plan/: REFACTOR-PLAN.md  refactor-design-python3-development.md  tasks-refactor-python3-development.md
.claude/scripts/: linux_development_workstation_tuning.sh
.claude/skills/: README.md
.claude/skills/agent-creator/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/claude-commands-reference-2026/: SKILL.md
.claude/skills/claude-hooks-reference-2026/: SKILL.md
.claude/skills/claude-plugins-reference-2026/: SKILL.md
.claude/skills/claude-skills-overview-2026/: SKILL.md
.claude/skills/delegate/: SKILL.md
.claude/skills/git-commit-helper/: SKILL.md
.claude/skills/rt-iac/: SKILL.md
.claude/skills/rt-ica/: SKILL.md
.claude/skills/scientific-thinking/: SKILL.md
.claude/skills/subagent-contract/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/templates/: code-review-checklist.md  command-template.md  feature-task-template.md  test-checklist.md
.claude/utilities/: find-temp-documentation.py
.github/: copilot-instructions.md
agent-orchestration/: SKILL.md  clear-framework.md  how-confident.md  is-it-done_gemini.md
async-python-patterns/: SKILL.md
brainstorming-skill/references/: bibliography-and-source-documentation.md  clickup-templates.md  itonics-innovation-platform.md  machine-learning-mastery.md  prompthub-role-prompting.md  software-testing-prompts.md
clang-format/: 01-alignment.md  02-breaking.md  03-braces.md  04-indentation.md  05-spacing.md  06-includes.md  07-languages.md  08-comments.md  09-advanced.md  cli-usage.md  index.md  quick-reference.md
clang-format/assets/configs/: compact-dense.clang-format  google-cpp-modified.clang-format  linux-kernel.clang-format  microsoft-visual-studio.clang-format  readable-spacious.clang-format
clang-format/assets/integrations/: emacs-clang-format.el  vimrc-clang-format.vim
clang-format/reference/: clang-format-cli.md  clang-format-style-options.md
clang-format/references/: 01-alignment.md  02-breaking.md  03-braces.md  04-indentation.md  05-spacing.md  06-includes.md  07-languages.md  08-comments.md  cli-usage.md
commands/: am-i-complete.md  is-it-done.md  orchestration-best-practicing.md  setup-aicommit.md
fastmcp-creator/: SKILL.md
gitlab-skill/commands/: setup-ci-publish-token.sh
gitlab-skill/references/: .gitignore  gitlab-ci-local-guide.md
gitlab-skill/references/ci-steps/: index.md
hatchling/references/advanced-features/: artifact-directories.md  build-data-passing.md  case-insensitive-filesystems.md  editable-installs.md
hatchling/references/build-environment/: cython-build-tools.md  environment-variables.md
hatchling/references/build-hooks/: buildhook-interface.md  configuration.md  execution-order.md  hook-data-passing.md  version-build-hook.md
hatchling/references/build-system/: build-options.md  (+1 more)
holistic-linting/: SKILL.md
holistic-linting/scripts/: install-agents.py
memory-bank-setup-skill/: MEMORY_BANK_DOCUMENTATION_SUMMARY.md  MEMORY_BANK_INDEX.md  MEMORY_BANK_MCP_DOCUMENTATION.md  MEMORY_BANK_QUICKSTART.md  MEMORY_BANK_REFERENCE.md
mkdocs/references/: cli_reference.md  plugins_reference.md
mkdocs/scripts/: example.py
plugins/agent-orchestration/: README.md
plugins/async-python-patterns/: CHANGELOG.md  LICENSE  README.md
plugins/brainstorming-skill/: README.md
plugins/clang-format/: CHANGELOG.md  README.md
plugins/commitlint/: README.md
plugins/conventional-commits/: CHANGELOG.md  LICENSE  README.md
plugins/fastmcp-creator/: README.md
plugins/gitlab-skill/: README.md
plugins/hatchling/: README.md
plugins/holistic-linting/: README.md
plugins/litellm/: README.md
plugins/llamafile/: README.md
plugins/mkdocs/: README.md
plugins/pre-commit/: README.md
plugins/prompt-optimization-claude-45/: CHANGELOG.md  LICENSE  README.md
plugins/pypi-readme-creator/: README.md
plugins/python3-development/: README.md
plugins/story-based-framing/: README.md
plugins/toml-python/: README.md
plugins/uv/: README.md
plugins/verification-gate/: README.md
plugins/xdg-base-directory/: README.md
prompt-optimization-claude-45/: SKILL.md  context-windows.md
pypi-readme-creator/references/: markdown-template.md  rst-template.rst  sphinx-readme-example.md
python3-development/: SKILL.md
python3-development/assets/: .editorconfig  .pre-commit-config.yaml
scripts/: restructure-to-plugins.py
sessions/: CLAUDE.sessions.md  sessions-config.json  statusline.js
sessions/api/: config_commands.js  index.js  protocol_commands.js  router.js  state_commands.js  task_commands.js  uninstall_commands.js
sessions/hooks/: post_tool_use.js  session_start.js  sessions_enforce.js  shared_state.js  subagent_hooks.js  user_messages.js
sessions/tasks/: TEMPLATE.md
story-based-framing/assets/: narrative_structure.txt  narrative_template.md
story-based-framing/references/: cross_domain_examples.md
templates/: add-documentation-updater-prompt.md
verification-gate/: SKILL.md
(+351 files in other folders)
